@@ -1,4 +1,6 @@
+AUX qtdbus-link.patch 506 RMD160 d48c29db90a10768f36c327075064c1ce7cda6d4 SHA1 8ab3e93b60321dbd01c07e33c179c3035d54658e SHA256 8dc52a8bc56d55118de7b819902724e39f0cfe239a326e96c31070047d1be994
 DIST kadu-0.6.5.3.tar.bz2 1676317 RMD160 95609df3d2c75f765861234ee2bc2bf9eb36ab10 SHA1 0714e007e42ff4c9abecee6f9b47e62d291fb6f6 SHA256 ed2ff311d1896a6344af91e65c901d72f93e2e005989a82c6f35a4dbfced6a75
+EBUILD kadu-bmpx_mediaplayer-0.6.5.3-r1.ebuild 358 RMD160 fa0949094ba878b49147308ec54d6705dd26aa71 SHA1 07373dd786a789ae066b9297895f8774a1e0d831 SHA256 601055f02ef01b52e8d356d414b6847ffe2b89c977dddb22cd8c2b832ea0033a
 EBUILD kadu-bmpx_mediaplayer-0.6.5.3.ebuild 326 RMD160 1bfed9daefb7f2bfbd4b8d8e77a8777a7cdfb5c2 SHA1 d24031e695dfdad27435e78b6701bb9ac2be6ec9 SHA256 dcd2d319bb836099d4f30a53c3537f459c16fbb8029bfa9bfa06efc03ad2bcf9
-MISC ChangeLog 559 RMD160 d0b4fd87974dae0e4b841717f9db8aa40718b59f SHA1 505ba6ccf5fdafac0ed9be1dabc1212ab3556ba3 SHA256 c7fe1af0fd9306e4373d3616543d7890c102bf789d981f12bf5f1f299044c329
+MISC ChangeLog 719 RMD160 532cad62283dc8e356a7b18f339c4b0bae604b3b SHA1 8efc8f57b7b9afa06982a206ea86acacb192b053 SHA256 cf8db305267e486f750e764df6c1a2acf813d57f04b8b2784a345355c4814aa0
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
